--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "react-dom": "^16.3.2",
     "react-konva": "^1.7.2",
     "react-native-web": "^0.6.1",
-    "react-scripts": "1.1.4"
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.9.1",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
