added foundation for graph

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
 
     "arrow-parens": "off",
     "function-paren-newline": "off",
+    "class-methods-use-this": "off",
 
     "no-confusing-arrow": ["error", { "allowParens": true }]
   }
