Implemented Drag Bounds, Image Background Grid, and (buggy) grid snapped objects

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "FormData": false,
     "__DEV__": false,
     "document": false,
+    "window": false,
 
     "describe": false,
     "it": false,
